--- a/main/static/style/checkbox.css
+++ b/main/static/style/checkbox.css
@@ -1,4 +1,5 @@
-.checkbox_container {
+/* Customize the label (the container) */
+.container {
     display: block;
     position: relative;
     padding-left: 35px;
@@ -12,7 +13,7 @@
   }
   
   /* Hide the browser's default checkbox */
-  .checkbox_container input {
+  .container input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
@@ -23,15 +24,20 @@
   /* Create a custom checkbox */
   .checkmark {
     position: absolute;
-    top: -7px;
+    top: 0;
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: rgb(255, 255, 255);
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
   }
   
   /* When the checkbox is checked, add a blue background */
-  .checkbox_container input:checked ~ .checkmark {
+  .container input:checked ~ .checkmark {
     background-color: #2196F3;
   }
   
@@ -43,12 +49,12 @@
   }
   
   /* Show the checkmark when checked */
-  .checkbox_container input:checked ~ .checkmark:after {
+  .container input:checked ~ .checkmark:after {
     display: block;
   }
   
   /* Style the checkmark/indicator */
-  .checkbox_container .checkmark:after {
+  .container .checkmark:after {
     left: 9px;
     top: 5px;
     width: 5px;
