--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -1,65 +1,45 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo</title>
-    <!-- <link rel="stylesheet" href="./styles/index.css" /> -->
-    <link rel="stylesheet" href="{% static 'styles/index.css' %}" />
-    <!-- <link rel="stylesheet" href="./styles/checkbox.css"> -->
-    <link rel="stylesheet" href="{% static 'styles/checkbox.css' %}">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Test</title>
+        <link rel="stylesheet" href="{% static 'style/style.css' %}">
+        <link rel="stylesheet" href="{% static 'style/checkbox.css' %}">
+    </head>
+
 <body>
     <section>
         <div class="create_container">
-          <form action="{% url 'add-todo' %}" method="POST">
-            {% csrf_token %}
-            <input
-                class="create_input"
-                type="text"
-                placeholder="Напишите сюда новую задачу"
-                name="todo_text"
-            />
-            <button class="create_button">Добавить</button>
-          </form>
+            <input type="text"
+            class="create_input"
+            placeholder="Введите задачу">
+            <button class="create_btn">Добавить</button>
         </div>
         <div class="todo_container">
-
-            {% for todo in todo_list %} 
-            <div class="todo_item
-                {% if todo.is_favorite %}
-                    marked
-                {% elif todo.is_closed %}
-                    done
-                {% endif %}
-            
-            ">
-                <div class="todo_item_header">
-                    <label class="checkbox_container">
-                        <input type="checkbox" 
-                            {% if todo.is_closed %}
-                                checked
-                            {% endif %}
-                        />
-                        <span class="checkmark"></span>
-                    </label>
-                    <h4><a href="{% url 'close-todo' todo.id %}">{{ todo.text }}</a></h4>
-                </div>
-                <div class="todo_item_footer">
-                    <p>{{ todo.created_at }}</p>
-                    <div class="action_buttons">
-                        {% if todo.is_favorite %}
-                            <a href="{% url 'mark-todo' todo.id %}"><img src="{% static './icons/marked.png' %}" /></a>
-                        {% else %}
-                            <a href="{% url 'mark-todo' todo.id %}"><img src="{% static './icons/unmarked.png' %}" /></a>
-                        {% endif %}
-                        
-                        <a href="{% url 'delete-todo' todo.id %}"><img src="{% static './icons/delete.png' %}" /></a>
+            {% for todo in todo_list %}
+                <div class="todo_item">
+                    <div class="todo_item__header">
+                        <label class="container">
+                            <input type="checkbox" />
+                            <span class="checkmark"></span>
+                        </label>
+                        <h4>{{ todo.text }}</h4>
+                    </div>
+                    <div class="todo_item__footer">
+                        <p>{{ todo.created_at }}</p>
+                        <div class="action_buttom">
+                            <img src="./src/trash-solid.svg" alt="Delete">
+                            <img src="./src/star-regular.svg" alt="Importance">
+                        </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-        {% endfor %}
-        </div>
-      </section>
+    </section>
+</body>
+
 </html>
