--- a/main/static/style/style.css
+++ b/main/static/style/style.css
@@ -82,10 +82,15 @@ section {
      min-height: 35px;
  }
 
- .todo_item__header h4{
-     font-size: 10px;
+ .todo_item__header h4 {
+     font-size: 18px;
      text-transform: uppercase;
  }
+
+ .todo_telnum {
+     margin-left: 15px;
+     font-size: 16px;
+    }
 
  .todo_item__footer, .action_buttom {
      display: flex;
