conected styles to templates

--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -32,8 +32,8 @@
                     <div class="todo_item__footer">
                         <p>{{ todo.created_at }}</p>
                         <div class="action_buttom">
-                            <img src="./src/trash-solid.svg" alt="Delete">
-                            <img src="./src/star-regular.svg" alt="Importance">
+                            <img src="{% static './src/trash-solid.svg' %}" alt="Delete">
+                            <img src="{% static './src/star-regular.svg' %}" alt="Importance">
                         </div>
                     </div>
                 </div>
