--- a/main/templates/to_meet.html
+++ b/main/templates/to_meet.html
@@ -32,8 +32,8 @@
                     <div class="todo_item__footer">
                         <p>{{ tomeet.date_of_meeting }}</p>
                         <div class="action_buttom">
-                            <img src="./src/trash-solid.svg">
-                            <img src="./src/star-regular.svg">
+                            <img src="{% static './src/trash-solid.svg' %}">
+                            <img src="{% static './src/star-regular.svg' %}">
                         </div>
                     </div>
                 </div>
