--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -14,26 +14,46 @@
 <body>
     <section>
         <div class="create_container">
+           <form action="{% url 'add-todo' %}" method="POST">
+               {% csrf_token %}
             <input type="text"
             class="create_input"
-            placeholder="Введите задачу">
+            placeholder="Введите задачу"
+            name="todo_text"
+            />
             <button class="create_btn">Добавить</button>
+           </form>
         </div>
         <div class="todo_container">
             {% for todo in todo_list %}
-                <div class="todo_item">
+            <div class="todo_item
+            {% if todo.is_favorite %}
+                marked
+            {% elif todo.is_closed %}
+                done
+            {% endif %}
+        
+        ">
                     <div class="todo_item__header">
                         <label class="container">
                             <input type="checkbox" />
+                                {% if todo.is_closed %}
+                                    checked
+                                {% endif %}
+                             />
                             <span class="checkmark"></span>
                         </label>
-                        <h4>{{ todo.text }}</h4>
+                        <h4><a href="{% url 'close-todo' todo.id %}"></a>{{ todo.text }}</h4>
                     </div>
                     <div class="todo_item__footer">
                         <p>{{ todo.created_at }}</p>
                         <div class="action_buttom">
-                            <img src="{% static './src/trash-solid.svg' %}" alt="Delete">
-                            <img src="{% static './src/star-regular.svg' %}" alt="Importance">
+                            {% if todo.is_favorite %}
+                                <img src="{% static './src/star-regular.svg' %}" alt="Importance">
+                            {% else %}
+                                <img src="{% static './src/star-solid.svg' %}" alt="Importance">
+                            {% endif %}
+                                <img src="{% static './src/trash-solid.svg' %}" alt="Delete">
                         </div>
                     </div>
                 </div>
