--- a/main/templates/habits.html
+++ b/main/templates/habits.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ToDo</title>
+        <title>Habits</title>
         <link rel="stylesheet" href="{% static 'style/style.css' %}">
         <link rel="stylesheet" href="{% static 'style/checkbox.css' %}">
     </head>
@@ -14,18 +14,18 @@
 <body>
     <section>
         <div class="create_container">
-           <form action="{% url 'add-todo' %}" method="POST">
+           <form action="{% url 'habits' %}" method="POST">
                {% csrf_token %}
             <input type="text"
             class="create_input"
-            placeholder="Введите задачу"
-            name="todo_text"
+            placeholder="Привычки"
+            name="habit"
             />
             <button class="create_btn">Добавить</button>
            </form>
         </div>
         <div class="todo_container">
-            {% for todo in todo_list %}
+            {% for habits in habits_list %}
             <div class="todo_item
             {% if todo.is_favorite %}
                 marked
@@ -43,10 +43,10 @@
                              />
                             <span class="checkmark"></span>
                         </label>
-                        <h4><a href="{% url 'close-todo' todo.id %}"></a>{{ todo.text }}</h4>
+                        <h4></a>{{ habits.name }}</h4>
                     </div>
                     <div class="todo_item__footer">
-                        <p>{{ todo.created_at }}</p>
+                        <p>{{ habits.comment }}</p>
                         <div class="action_buttom">
                             {% if todo.is_favorite %}
                                 <img src="{% static './src/star-solid.svg' %}" alt="Importance">
