--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -43,7 +43,7 @@
                              />
                             <span class="checkmark"></span>
                         </label>
-                        <h4><a href="{% url 'close-todo' todo.id %}"></a>{{ todo.text }}</h4>
+                        <h4><a href="{% url 'close-todo' todo.id %}">{{ todo.text }}</a></h4>
                     </div>
                     <div class="todo_item__footer">
                         <p>{{ todo.created_at }}</p>
