--- a/main/templates/habits.html
+++ b/main/templates/habits.html
@@ -64,6 +64,14 @@
                 </div>
                 {% endfor %}
             </div>
+            <div class="homework_links">
+                <button>
+                    <a href="http://127.0.0.1:8000">Home</a>
+                </button>
+                <button>
+                    <a href="http://127.0.0.1:8000/to_meet/">to_meet</a>
+                </button>
+           </div>
     </section>
 </body>
 
