--- a/main/templates/to_meet.html
+++ b/main/templates/to_meet.html
@@ -66,6 +66,14 @@
                 </div>
                 {% endfor %}
             </div>
+            <div class="homework_links">
+                <button>
+                    <a href="http://127.0.0.1:8000">Home</a>
+                </button>
+                <button>
+                    <a href="http://127.0.0.1:8000/habits">habits</a>
+                </button>
+           </div>
     </section>
 </body> 
 </body>
