--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -14,6 +14,7 @@
 <body>
     <section>
         <div class="create_container">
+            
            <form action="{% url 'add-todo' %}" method="POST">
                {% csrf_token %}
             <input type="text"
@@ -59,6 +60,14 @@
                 </div>
                 {% endfor %}
             </div>
+           <div class="homework_links">
+                <button>
+                    <a href="http://127.0.0.1:8000/to_meet/">to_meet</a>
+                </button>
+                <button>
+                    <a href="http://127.0.0.1:8000/habits">habits</a>
+                </button>
+           </div>
     </section>
 </body>
 
