--- a/main/static/style/style.css
+++ b/main/static/style/style.css
@@ -130,6 +130,7 @@ section {
      text-transform: uppercase;
      margin: 0 20px;
      border: solid 1px #757575;
+     border-radius: 5px;
      transition: all .2s;
  }
 
